<resources>
    <string name="app_name">ForegroundServiceDemo</string>
    <string name="channel_name">Foreground Service Channel</string>
    <string name="channel_description">This channel is to indicate whether the foreground service is running or not.</string>
    <string name="foreground_service_is_running">Foreground Service is running</string>
    <string name="tv_hint_stop_service">Host service is activated. Press Pause or Destruct to update its status.\n
        If You destruct the host, it will NOT reactivate its status until you activate it again manually.\n
        If You pause the host, it will reactivate its status based on your configuration.</string>
    <string name="tv_hint_start_service">Host service is not alive Press the Activate or Resume button to start.\n
        If you have never activated the Host service or the host service has been destroyed by you manually, you need activate it first.\n
        If you have deactivated the Host service, you could activate it or destruct it. After its destruction, everything will be reset.
        </string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="destruct">Destruct</string>
    <string name="activate">Activate</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="on_deceased_log">Oh, no, our host is killing us. But no worry, let us keep fingers crossed that ourhost will resurrect on device reboot.</string>
    <string name="on_alive_log">Let\'s do something awesome without worrying about being killed brutally by Android System.</string>
</resources>